refactor: update path creation in TestStatesCSVReader for consistency and clarity